# Ai-Hair-stylist

./: README.md  pyproject.toml
src/ai_hair_stylist/: __init__.py  __main__.py  catalog.py  preferences.py  recommendation.py
src/ai_hair_stylist/data/: hairstyles.json
tests/: test_recommendation.py
